--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     },
     "require": {
         "php": ">=5.6",
+        "ext-json": "*",
         "rollbar/rollbar": "^1",
         "symfony/dependency-injection": "^3.4 | ^4.0",
         "symfony/config": "^3.4 | ^4.0",
