--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     "require": {
         "php": ">=5.6",
         "ext-json": "*",
-        "rollbar/rollbar": "^1",
+        "rollbar/rollbar": "^1.0 | ^2.0",
         "symfony/dependency-injection": "^3.4 | ^4.0 | ^5.0",
         "symfony/config": "^3.4 | ^4.0 | ^5.0",
         "symfony/http-kernel": "^3.4 | ^4.0 | ^5.0",
