--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jbroutier/rollbar-php-symfony-bundle",
+    "name": "jbroutier/symfony-rollbar-bundle",
     "description": "Bundle for Symfony that integrates Rollbar tracker",
     "type": "library",
     "license": "MIT",
@@ -11,10 +11,16 @@
         {
             "name": "Artur Moczulski",
             "email": "artur.moczulski@gmail.com"
+        },
+        {
+            "name": "Jérémie Broutier",
+            "email": "jeremie.broutier@gmail.com"
         }
     ],
     "autoload": {
-        "psr-4": { "Rollbar\\Symfony\\RollbarBundle\\": "" },
+        "psr-4": {
+            "Rollbar\\Symfony\\RollbarBundle\\": ""
+        },
         "exclude-from-classmap": [
             "/Tests/"
         ]
@@ -23,24 +29,26 @@
         "files": [
             "Tests/Fixtures/app/AppKernel.php",
             "Tests/Fixtures/ErrorHandler.php"
-            ],
-        "psr-4": { "Tests\\": "tests/"}
+        ],
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
     },
     "require": {
         "php": ">=5.6",
         "ext-json": "*",
-        "rollbar/rollbar": "^1.0 | ^2.0",
-        "symfony/dependency-injection": "^3.4 | ^4.0 | ^5.0",
-        "symfony/config": "^3.4 | ^4.0 | ^5.0",
-        "symfony/http-kernel": "^3.4 | ^4.0 | ^5.0",
-        "symfony/monolog-bundle": "*",
-        "symfony/serializer": "*"
+        "rollbar/rollbar": "^1.0|^2.0",
+        "symfony/config": "^3.4|^4.0|^5.0",
+        "symfony/dependency-injection": "^3.4|^4.0|^5.0",
+        "symfony/http-kernel": "^3.4|^4.0|^5.0",
+        "symfony/monolog-bundle": "^3.4",
+        "symfony/serializer": "^3.4|^4.0|^5.0"
     },
     "require-dev": {
+        "matthiasnoback/symfony-dependency-injection-test": "^1.1",
         "phpunit/phpunit": "^5.7",
-        "symfony/framework-bundle": "^3.4 | ^4.0 | ^5.0",
         "squizlabs/php_codesniffer": "^2.7",
-        "matthiasnoback/symfony-dependency-injection-test": "^1.1"
+        "symfony/framework-bundle": "^3.4|^4.0|^5.0"
     },
     "scripts": {
         "test": [
